--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -38,5 +38,31 @@ form {
   
   }
   
+/* ... (previous CSS) */
+
+/* Media queries for responsiveness */
+@media (max-width: 1366px) {
+  form {
+      max-width: 380px;
+  }
+}
+
+@media (max-width: 1024px) {
+  form {
+      max-width: 350px;
+  }
+}
+
+@media (max-width: 768px) {
+  form {
+      max-width: 300px;
+  }
+}
+
+@media (max-width: 480px) {
+  form {
+      max-width: 280px;
+  }
+}
 
   
