--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -63,3 +63,30 @@
 h1 {
     color: white;
 }
+
+/* ... (previous CSS) */
+
+/* Media queries for responsiveness */
+@media (max-width: 1366px) {
+    .education-box {
+        width: 70%;
+    }
+}
+
+@media (max-width: 1024px) {
+    .education-box {
+        width: 75%;
+    }
+}
+
+@media (max-width: 768px) {
+    .education-box {
+        width: 80%;
+    }
+}
+
+@media (max-width: 480px) {
+    .education-box {
+        width: 85%;
+    }
+}
